Fixed changing profile picture with cropper enabled

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -1,3 +1,7 @@
 .voted {
 	border: 2px solid black;
 }
+
+.img-container > img {
+  max-width: 100%;
+}
